# crossapp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  ossar-analysis.yml  python-app.yml  python-package.yml
crossapp/: __init__.py  envCreate.py  install.py  repo_.py
crossapp/api/: get_storage.py  get_temp.py
crossapp/pkg/: detect_installation.py
crossapp/pkg/cif/: cif_install.py
src/crossapp/: __main__.py  __version__.py
src/crossapp/API/: storage.py
src/crossapp/add/cap/: install_cap.py
src/crossapp/add/repo/: add.py  install.py  repoMgmt.py
src/crossapp/create/: build.py  createDirStruc.py
src/crossapp/list/: search.py
src/crossapp/remove/cap/: remove_app.py
src/crossapp/remove/repo/: remove_repo.py
tests/: __init__.py  test_all.py  test_crossapp.py  test_todo.py
