[tool.poetry]
name = "crossapp"
version = "1.0.0a1"
description = "A zipapp based python packaging library."
authors = ["aerocyber <86760749+AA-5@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
