[tool.poetry]
name = "crossapp"
version = "1.0.0-alpha.1"
description = ""
authors = ["aerocyber"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
